fix scroll on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,13 @@
+html,
 body {
+  height: 100%;
   margin: 0;
+  overflow: hidden;
+  overscroll-behavior: none;
+  touch-action: none;
+}
+
+body {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,6 +16,8 @@ body {
   font-family: sans-serif;
   font-size: 24px;
   font-weight: 900;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .field-cell {
@@ -78,20 +88,10 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-@keyframes show {
-  0% {
-    opacity: 0.5;
-    transform: scale(0);
-  }
-}
-
 .game-field {
   background: #bbada0;
   border-spacing: 10px;
   border-radius: 5px;
-
-  touch-action: none;
-  user-select: none;
 }
 
 .game-header {
@@ -183,10 +183,12 @@ h1 {
 }
 
 .container {
+  width: 350px;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 350px;
 }
 
 .message-win {
